infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
  labels:
    app: comments
spec:
  selector:
    matchLabels:
      app: comments
  replicas: 1
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: kodega2016/blogs_comments
          imagePullPolicy: Always
          ports:
            - containerPort: 4001
              name: comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-service
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
