infra/k8s/eventbus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-deployment
  labels:
    app: eventbus
spec:
  selector:
    matchLabels:
      app: eventbus
  replicas: 1
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
        - name: eventbus
          image: kodega2016/blogs_eventbus
          imagePullPolicy: Always
          ports:
            - containerPort: 4005
              name: eventbus
---
apiVersion: v1
kind: Service
metadata:
  name: eventbus-clusterip-service
spec:
  selector:
    app: eventbus
  type: ClusterIP
  ports:
    - name: eventbus
      protocol: TCP
      port: 4005
      targetPort: 4005
