infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
  labels:
    app: moderation
spec:
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: kodega2016/blogs_moderation
          imagePullPolicy: Always
          ports:
            - containerPort: 4003
              name: moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-service
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
