infra/k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
  labels:
    app: posts
spec:
  selector:
    matchLabels:
      app: posts
  replicas: 1
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: kodega2016/blogs_posts
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-service
spec:
  selector:
    app: posts
  type: NodePort
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30001
